[gd_scene load_steps=4 format=3 uid="uid://blqa2ewgxewm5"]

[ext_resource type="Script" path="res://prog_52a.gd" id="1_22sj6"]
[ext_resource type="Theme" uid="uid://cdsoq1v018kq4" path="res://Big_Font.tres" id="2_ogp43"]

[sub_resource type="LabelSettings" id="LabelSettings_vjhlr"]
font_size = 38

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22sj6")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 138.0
offset_right = 321.0
offset_bottom = 191.0
text = "Length:"
label_settings = SubResource("LabelSettings_vjhlr")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 55.0
offset_top = 214.0
offset_right = 320.0
offset_bottom = 267.0
text = "Width:"
label_settings = SubResource("LabelSettings_vjhlr")
horizontal_alignment = 2
vertical_alignment = 1

[node name="LblArea" type="Label" parent="."]
offset_left = 628.0
offset_top = 140.0
offset_right = 893.0
offset_bottom = 193.0
text = "Area:"
label_settings = SubResource("LabelSettings_vjhlr")
horizontal_alignment = 2
vertical_alignment = 1

[node name="LblPerim" type="Label" parent="."]
offset_left = 631.0
offset_top = 215.0
offset_right = 896.0
offset_bottom = 268.0
text = "Perimeter:"
label_settings = SubResource("LabelSettings_vjhlr")
horizontal_alignment = 2
vertical_alignment = 1

[node name="TxtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 363.0
offset_top = 128.0
offset_right = 488.0
offset_bottom = 186.0

[node name="TxtWid" type="LineEdit" parent="."]
offset_left = 364.0
offset_top = 213.0
offset_right = 489.0
offset_bottom = 271.0

[node name="BtnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 466.0
offset_right = 294.0
offset_bottom = 618.0
theme = ExtResource("2_ogp43")
text = "Calculate"

[node name="BtnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 463.0
offset_right = 678.0
offset_bottom = 615.0
theme = ExtResource("2_ogp43")
text = "Clear"

[node name="BtnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 823.0
offset_top = 471.0
offset_right = 1066.0
offset_bottom = 623.0
theme = ExtResource("2_ogp43")
text = "Exit"

[connection signal="pressed" from="BtnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="BtnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="BtnExit" to="." method="_on_btn_exit_pressed"]
